[env] migrate to yarn, add clean command

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ package-lock.json
 /packages/compiler/lib/expressions/expression-parser.js
 lerna-debug.log
 examples/**/*.d.ts
+examples/**/*.jay.html.ts
 **/coverage/
