--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -3,39 +3,41 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
-    "jay-secure": "node node_modules/jay-cli/dist/index.js runtime ./lib ./lib-secure/main",
+    "d": "jay-cli definitions ./lib",
+    "jay-secure": "jay-cli runtime ./lib ./lib-secure/main",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run rollup",
+    "build": "npm run d && npm run mk-secure && npm run rollup",
     "copy": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
-    "copy-basic": "mkdir ./lib-secure/sandbox/basic/ && cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
-    "copy-collection": "mkdir ./lib-secure/sandbox/collections/ && cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
-    "copy-composite": "mkdir ./lib-secure/sandbox/composite/ && cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
-    "copy-condition": "mkdir ./lib-secure/sandbox/conditions/ && cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
-    "copy-table": "mkdir ./lib-secure/sandbox/table/ && cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
-    "mk-secure": "npm run jay-secure && npm run copy && npm run copy-basic && npm run copy-collection && npm run copy-composite && npm run copy-condition && npm run copy-table"
+    "copy-basic": "mkdir -p ./lib-secure/sandbox/basic/ && cp ./lib/basic/*-refs.d.ts ./lib-secure/main/basic && cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
+    "copy-collection": "mkdir -p ./lib-secure/sandbox/collections/ && cp ./lib/collections/*-refs.d.ts ./lib-secure/main/collections && cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
+    "copy-composite": "mkdir -p ./lib-secure/sandbox/composite/ && cp ./lib/composite/*-refs.d.ts ./lib-secure/main/composite && cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
+    "copy-condition": "mkdir -p ./lib-secure/sandbox/conditions/ && cp ./lib/conditions/*-refs.d.ts ./lib-secure/main/conditions && cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
+    "copy-table": "mkdir -p ./lib-secure/sandbox/table/ && cp ./lib/table/*-refs.d.ts ./lib-secure/main/table && cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
+    "mk-secure": "npm run jay-secure && npm run copy && npm run copy-basic && npm run copy-collection && npm run copy-composite && npm run copy-condition && npm run copy-table",
+    "clean": "rm -rf dist && (rm -rf lib/**/*.d.ts || :)",
+    "test": ":"
   },
   "dependencies": {
-    "immer": "^10.0.2",
-    "jay-component": "1.0.0",
-    "jay-json-patch": "1.0.0",
-    "jay-serialization": "1.0.0",
-    "jay-runtime": "1.0.0",
-    "jay-reactive": "1.0.4",
-    "jay-secure": "1.0.0"
+    "immer": "^10.0.3",
+    "jay-component": "workspace:^",
+    "jay-json-patch": "workspace:^",
+    "jay-reactive": "workspace:^",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^",
+    "jay-serialization": "workspace:^"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.3.4",
-    "jay-cli": "1.0.0",
-    "rollup": "^2.77.2",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-jay": "1.0.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "jay-cli": "workspace:^",
+    "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   }
 }
