--- a/examples/scrum-board/package.json
+++ b/examples/scrum-board/package.json
@@ -3,32 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
-    "clean": "rm -rf ./lib/*.d.ts",
-    "jay": "node node_modules/jay-cli/dist/index.js runtime ./lib",
+    "d": "jay-cli definitions ./lib",
+    "clean": "rm -rf dist && (rm -rf lib/**/*.d.ts || :)",
+    "jay": "jay-cli runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run rollup",
-    "mk-secure": "npm run jay && mv ./lib/counter.jay.html.ts ./lib-secure/main && cp .lib/counter.ts ./lib-secure/sandbox"
+    "build": "echo 'npm run d && npm run rollup'",
+    "mk-secure": "npm run jay && mv ./lib/counter.jay.html.ts ./lib-secure/main && cp .lib/counter.ts ./lib-secure/sandbox",
+    "test": ":"
   },
   "dependencies": {
-    "jay-component": "1.0.0",
-    "jay-json-patch": "1.0.0",
-    "jay-runtime": "1.0.0",
-    "jay-reactive": "1.0.4",
-    "jay-secure": "1.0.0"
+    "jay-component": "workspace:^",
+    "jay-json-patch": "workspace:^",
+    "jay-reactive": "workspace:^",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.3.4",
-    "jay-cli": "1.0.0",
-    "rollup": "^2.77.2",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-jay": "1.0.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "jay-cli": "workspace:^",
+    "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   }
 }
