--- a/exploration/atomics-example/package.json
+++ b/exploration/atomics-example/package.json
@@ -1,6 +1,11 @@
 {
   "name": "atomics-example",
   "version": "1.0.0",
+  "scripts": {
+    "build": ":",
+    "clean": ":",
+    "test": ":"
+  },
   "dependencies": {
     "express": "^4.18.2"
   }
