--- a/exploration/babel-plugin-jay/package.json
+++ b/exploration/babel-plugin-jay/package.json
@@ -3,24 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "tsc && node dist",
-    "test": "jest",
-    "rollup": "rollup --config ./rollup.config.js",
-    "copy": "cp examples/index.html dist/index.html && cp examples/index.css dist/index.css",
-    "build": "npm run rollup && npm run copy"
+    "start": "npm run build && node dist",
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-syntax-typescript": "^7.12.13",
-    "@babel/types": "^7.12.13",
-    "typescript": "^4.0.3"
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-syntax-typescript": "^7.22.5",
+    "@babel/types": "^7.23.0",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/node": "^14.11.10",
-    "jest": "^26.6.0",
-    "tslib": "^2.0.3"
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/node": "^20.8.10",
+    "jest": "^26.6.3",
+    "tslib": "^2.6.2"
   }
 }
