--- a/exploration/message-comm-channel/package.json
+++ b/exploration/message-comm-channel/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "atomics-example",
+  "name": "message-comm-channel",
   "version": "1.0.0",
   "scripts": {
     "rollup": "rollup --config ./rollup.config.js",
     "ts": "tsc",
     "copy": "cp lib/index.html dist/index.html",
-    "build": "npm run rollup & npm run copy"
+    "build": "npm run rollup & npm run copy",
+    "clean": "rm -rf dist",
+    "test": ":"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.4",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "rollup": "^2.77.2"
+    "@rollup/plugin-typescript": "^8.5.0",
+    "rollup": "^2.79.1",
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "jay-component": "1.0.0",
-    "jay-runtime": "1.0.0",
-    "jay-reactive": "1.0.4",
-    "jay-secure": "1.0.0"
+    "jay-component": "workspace:^",
+    "jay-reactive": "workspace:^",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^"
   }
 }
