--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,20 +2,20 @@
   "name": "jay-cli",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "bin": {
-    "definitions": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "test": ":"
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "jay-compiler": "1.0.0",
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "jay-compiler": "workspace:^"
   },
   "devDependencies": {
-    "@types/node": "^14.18.23",
-    "jest": "^26.6.0",
-    "typescript": "^4.7.4"
+    "@types/node": "^20.8.10",
+    "jest": "^26.6.3",
+    "typescript": "^4.9.5"
   }
 }
