--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -8,9 +8,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.js lib/expressions/expression-parser.pegjs & mkdir -p dist/expressions & cp lib/expressions/expression-parser.js dist/expressions/expression-parser.js",
-    "test": "npm run pegjs && jest",
-    "build": "npm run pegjs && tsc"
+    "pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.js lib/expressions/expression-parser.pegjs && mkdir -p dist/expressions && cp lib/expressions/expression-parser.js dist/expressions/expression-parser.js",
+    "build": "npm run pegjs && tsc",
+    "clean": "rm -rf dist",
+    "test": "npm run pegjs && jest"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -20,24 +21,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/js-yaml": "^4.0.5",
+    "@babel/core": "^7.23.2",
+    "@types/js-yaml": "^4.0.8",
     "change-case": "^4.1.2",
     "js-yaml": "^4.1.0",
     "node-html-parser": "^2.2.1",
     "pegjs": "^0.10.0",
     "pluralize": "^8.0.0",
     "ts-morph": "^13.0.3",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@caiogondim/strip-margin": "^1.0.0",
-    "@types/node": "^14.18.23",
-    "jay-component": "1.0.0",
-    "jay-runtime": "1.0.0",
-    "jay-secure": "1.0.0",
-    "jest": "^26.6.0"
+    "@types/babel__core": "^7.20.3",
+    "@types/node": "^20.8.10",
+    "jay-component": "workspace:^",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^",
+    "jest": "^26.6.3"
   }
 }
