--- a/packages/list-compare/package.json
+++ b/packages/list-compare/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc",
-    "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "jest": {},
   "files": [
     "dist"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/node": "^14.18.23",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/babel__core": "^7.20.3",
+    "@types/node": "^20.8.10",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@babel/core": "^7.23.2"
   }
 }
