--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "dist/index",
   "scripts": {
-    "test": "#",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "test": ":"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -12,13 +13,13 @@
     ]
   },
   "dependencies": {
-    "jay-compiler": "1.0.0",
-    "typescript": "^4.7.4"
+    "jay-compiler": "workspace:^",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/node": "^14.18.23",
-    "jest": "^26.6.0",
-    "rollup": "^2.77.2",
-    "tslib": "^2.4.0"
+    "@types/node": "^20.8.10",
+    "jest": "^26.6.3",
+    "rollup": "^2.79.1",
+    "tslib": "^2.6.2"
   }
 }
