--- a/packages/serialization/package.json
+++ b/packages/serialization/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc",
-    "test": "jest --runInBand",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "test": "jest --runInBand"
   },
   "jest": {},
   "files": [
@@ -13,16 +13,18 @@
     "lib"
   ],
   "dependencies": {
-    "jay-reactive": "1.0.4",
-    "jay-json-patch": "1.0.0"
+    "@babel/core": "^7.23.2",
+    "jay-json-patch": "workspace:^",
+    "jay-reactive": "workspace:^"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/node": "^17.0.21",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/babel__core": "^7.20.3",
+    "@types/node": "^20.8.10",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   }
 }
