[build] vite and vitest for some of the packages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "packageManager": "yarn@3.6.4",
   "workspaces": {
     "packages": [
+      "dev-environment",
       "packages/*",
       "packages/_deprecated/*",
       "examples/*",
