--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,35 +1,33 @@
 {
   "name": "jay-runtime",
   "version": "1.0.0",
+  "type": "module",
   "main": "dist/index",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:js && npm run build:types && npm run build:fix-dts",
+    "build:js": "vite build",
+    "build:types": "tsup lib/index.ts --dts-only --format esm ",
+    "build:check-types": "tsc",
+    "build:fix-dts": "node ./scripts/fix-dts.js",
     "clean": "rm -rf dist",
-    "test": "jest --runInBand"
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
-  "jest": {},
   "dependencies": {
-    "@babel/core": "^7.23.3",
     "jay-list-compare": "workspace:^",
     "jay-reactive": "workspace:^"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@jest/types": "^28.1.3",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.5.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@types/babel__core": "^7.20.4",
-    "@types/jsdom": "^16.2.15",
+    "@testing-library/jest-dom": "^6.1.4",
     "@types/node": "^20.9.0",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "jest": "^26.6.3",
-    "jsdom": "^16.7.0",
-    "rollup": "^2.79.1",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "jay-dev-environment": "workspace:^",
+    "replace-in-file": "^7.0.2",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
