--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,7 @@
 dist
 dist-secure
 build
-/packages/compiler/lib/expressions/expression-parser.js
-packages/compiler/test/fixtures
+/packages/compiler/lib/expressions/expression-parser.cjs
+/packages/compiler/test/fixtures/**/*.html
+.vscode
+.yarn
