--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-compiler",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "dist/index.js",
   "directories": {
@@ -8,39 +9,40 @@
     "lib": "lib"
   },
   "scripts": {
-    "pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.js lib/expressions/expression-parser.pegjs && mkdir -p dist/expressions && cp lib/expressions/expression-parser.js dist/expressions/expression-parser.js",
-    "build": "npm run pegjs && tsc",
+    "build": "npm run build:pegjs && npm run build:js && npm run build:types",
+    "build:pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.cjs lib/expressions/expression-parser.pegjs",
+    "build:js": "vite build",
+    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:check-types": "tsc",
+    "build:watch": "npm run build:js -- --watch",
     "clean": "rm -rf dist",
-    "test": "npm run pegjs && jest"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./jest-setup.js"
-    ]
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.23.3",
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
+    "jay-component": "workspace:^",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^",
     "js-yaml": "^4.1.0",
     "node-html-parser": "^6.1.11",
     "pegjs": "^0.10.0",
     "pluralize": "^8.0.0",
-    "ts-morph": "^13.0.3",
-    "tslib": "^2.6.2",
+    "prettier": "^3.1.0",
+    "ts-morph": "^20.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@caiogondim/strip-margin": "^1.0.0",
-    "@types/babel__core": "^7.20.4",
+    "@testing-library/jest-dom": "^6.1.4",
     "@types/node": "^20.9.0",
-    "jay-component": "workspace:^",
-    "jay-runtime": "workspace:^",
-    "jay-secure": "workspace:^",
-    "jest": "^26.6.3"
+    "jay-dev-environment": "workspace:^",
+    "tsup": "^7.2.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
