--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -1,14 +1,6 @@
 {
+  "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "ES2019",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "rootDir": "lib",
-    "outDir": "dist",
-    "declaration": true
-  },
-  "lib": ["es2015"],
-  "exclude": ["examples", "test", "dist"]
+    "outDir": "dist"
+  }
 }
