--- a/.prettierignore
+++ b/.prettierignore
@@ -3,5 +3,7 @@ dist-secure
 build
 /packages/compiler/lib/expressions/expression-parser.cjs
 /packages/compiler/test/fixtures/**/*.html
+/packages/compiler/test/fixtures/**/*.html
+/examples/**/*.jay.html
 .vscode
 .yarn
