--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -25,7 +25,7 @@
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "clean": "rm -rf dist",
-    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test && npm run definitions && npm run runtime",
     "test": "vitest run",
     "test:watch": "vitest"
   },
