--- a/packages/_deprecated/mutable/package.json
+++ b/packages/_deprecated/mutable/package.json
@@ -3,26 +3,27 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:js && npm run build:types",
+    "build:js": "vite build",
+    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:check-types": "tsc",
     "clean": "rm -rf dist",
-    "test": "jest --runInBand"
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
-  "jest": {},
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@babel/core": "^7.23.3",
     "jay-reactive": "workspace:^"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@types/babel__core": "^7.20.4",
     "@types/node": "^20.9.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "jay-dev-environment": "workspace:^",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0",
+    "vitest": "^0.34.6"
   }
 }
