--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -1,16 +1,17 @@
 {
   "name": "rollup-plugin-jay",
   "version": "1.0.0",
-  "main": "dist/index",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:js && npm run build:types",
+    "build:js": "vite build",
+    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:check-types": "tsc",
+    "build:executable-bin": "chmod +x dist/index.js",
     "clean": "rm -rf dist",
-    "test": ":"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./jest-setup.js"
-    ]
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "test": ":",
+    "test:watch": ":"
   },
   "dependencies": {
     "jay-compiler": "workspace:^",
@@ -18,8 +19,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
-    "jest": "^26.6.3",
-    "rollup": "^2.79.1",
-    "tslib": "^2.6.2"
+    "jay-dev-environment": "workspace:^",
+    "tsup": "^7.3.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
