--- a/packages/rollup-plugin/tsconfig.json
+++ b/packages/rollup-plugin/tsconfig.json
@@ -1,14 +1,6 @@
 {
+  "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "ES2019",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "lib": ["ES2019", "dom"],
-    "declaration": true
-  },
-  "lib": ["es2015"],
-  "exclude": ["test", "examples", "dist"]
+    "outDir": "dist"
+  }
 }
