--- a/exploration/babel-plugin-jay/package.json
+++ b/exploration/babel-plugin-jay/package.json
@@ -3,23 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build && node dist",
-    "build": "tsc",
+    "start": "vite build && node dist",
+    "build": "npm run build:js && npm run build:types",
+    "build:js": "vite build",
+    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:check-types": "tsc",
+    "build:watch": "npm run build:js -- --watch",
     "clean": "rm -rf dist",
-    "test": "jest"
+    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-syntax-typescript": "^7.23.3",
-    "@babel/types": "^7.23.3",
-    "typescript": "^5.2.2"
+    "@babel/types": "^7.23.3"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@types/node": "^20.9.0",
-    "jest": "^26.6.3",
-    "tslib": "^2.6.2"
+    "jay-dev-environment": "workspace:^",
+    "rollup": "^4.4.1",
+    "tslib": "^2.6.2",
+    "tsup": "^7.3.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
