--- a/exploration/babel-plugin-jay/tsconfig.json
+++ b/exploration/babel-plugin-jay/tsconfig.json
@@ -1,13 +1,6 @@
 {
+  "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "module": "es2015",
-    "esModuleInterop": true,
-    "target": "es2015",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "dist"
-  },
-  "lib": ["es2015"],
-  "exclude": ["test", "**/input.tsx", "examples/todo.tsx"]
+  }
 }
