[fix] build failures and stuck rollup compilation

--- a/exploration/rfc6902/package.json
+++ b/exploration/rfc6902/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": ":",
     "clean": ":",
-    "test": ":"
+    "test": ":",
+    "confirm": ":"
   },
   "dependencies": {
     "rfc6902": "^5.0.1"
