--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -1,12 +1,14 @@
 {
   "name": "jay-example-mini-benchmark",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "d": "jay-cli definitions ./lib",
     "jay-secure": "jay-cli runtime ./lib ./lib-secure/main",
     "rollup": "echo 'rollup --config ./rollup.config.js'",
     "build": "npm run d && npm run mk-secure && npm run rollup",
+    "confirm": "npm run clean && npm run build && npm run test",
     "copy": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
     "copy-basic": "mkdir -p ./lib-secure/sandbox/basic/ && cp ./lib/basic/*-refs.d.ts ./lib-secure/main/basic && cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
     "copy-collection": "mkdir -p ./lib-secure/sandbox/collections/ && cp ./lib/collections/*-refs.d.ts ./lib-secure/main/collections && cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
@@ -30,13 +32,13 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
-    "rollup": "^2.79.1",
+    "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
