--- a/examples/scrum-board/package.json
+++ b/examples/scrum-board/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-example-scrum-board",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "d": "jay-cli definitions ./lib",
@@ -8,6 +9,7 @@
     "jay": "jay-cli runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
     "build": "echo 'npm run d && npm run rollup'",
+    "confirm": "npm run clean && npm run build && npm run test",
     "mk-secure": "npm run jay && mv ./lib/counter.jay.html.ts ./lib-secure/main && cp .lib/counter.ts ./lib-secure/sandbox",
     "test": ":"
   },
@@ -22,13 +24,13 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
-    "rollup": "^2.79.1",
+    "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
