--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -1,12 +1,14 @@
 {
   "name": "jay-example-todo-components",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "d": "jay-cli definitions ./lib",
     "jay": "jay-cli runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
     "build": "npm run d && npm run mk-secure && npm run rollup",
+    "confirm": "npm run clean && npm run build && npm run test",
     "clean": "rm -rf dist && (rm -rf lib/**/*.d.ts || :)",
     "mk-secure": "npm run jay && mv ./lib/*.jay.html.ts ./lib-secure/main && cp ./lib/*-refs.d.ts ./lib-secure/main && find lib -name '*.ts' '!' -name '*.jay.html.d.ts' '!' -name 'index.ts' | xargs -I{} cp {} ./lib-secure/sandbox",
     "test": ":"
@@ -23,13 +25,13 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
-    "rollup": "^2.79.1",
+    "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
