--- a/exploration/atomics-example/package.json
+++ b/exploration/atomics-example/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": ":",
     "clean": ":",
-    "test": ":"
+    "test": ":",
+    "confirm": ":"
   },
   "dependencies": {
     "express": "^4.18.2"
