--- a/exploration/babel-plugin-jay/package.json
+++ b/exploration/babel-plugin-jay/package.json
@@ -7,10 +7,9 @@
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
-    "build:check-types": "tsc",
     "build:watch": "npm run build:js -- --watch",
     "clean": "rm -rf dist",
-    "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
+    "confirm": "npm run clean && npm run build && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -23,13 +22,13 @@
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
-    "rollup": "^4.4.1",
+    "rollup": "^4.5.0",
     "tslib": "^2.6.2",
-    "tsup": "^7.3.0",
+    "tsup": "^8.0.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
 }
