--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "npm run build:js && npm run build:executable-bin",
     "build:js": "vite build",
+    "build:watch": "vite build --watch",
     "build:check-types": "tsc",
-    "build:executable-bin": "chmod +x dist/index.js",
+    "build:executable-bin": "chmod +x dist/index.js && (cd ../../node_modules/.bin && ln -sf ../../packages/cli/dist/index.js jay-cli)",
     "clean": "rm -rf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": ":",
@@ -19,9 +20,9 @@
     "jay-compiler": "workspace:^"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^5.0.0"
   }
 }
