--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -38,10 +38,12 @@
   "devDependencies": {
     "@caiogondim/strip-margin": "^1.0.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
-    "tsup": "^7.2.0",
-    "vite": "^4.5.0",
+    "jest-diff": "^29.7.0",
+    "jest-matcher-utils": "^29.7.0",
+    "tsup": "^8.0.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
 }
