--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -16,16 +16,18 @@
   },
   "dependencies": {
     "jay-list-compare": "workspace:^",
-    "jay-reactive": "workspace:^"
+    "jay-reactive": "workspace:^",
+    "jsdom": "^22.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
-    "@types/node": "^20.9.0",
+    "@types/jsdom": "^21.1.5",
+    "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
     "replace-in-file": "^7.0.2",
-    "tsup": "^7.2.0",
+    "tsup": "^8.0.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
 }
