--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -5,11 +5,12 @@
   "description": "",
   "scripts": {
     "d": "jay-cli definitions ./lib",
-    "jay": "jay-cli runtime ./lib",
+    "jay-secure": "jay-cli runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run mk-secure && npm run rollup",
-    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
-    "mk-secure": "npm run jay && mv ./lib/*.jay.html.ts ./lib-secure/main && cp ./lib/*-refs.d.ts ./lib-secure/main && find lib -name '*.ts' '!' -name '*.jay.html.d.ts' '!' -name 'index.ts' | xargs -I{} cp {} ./lib-secure/sandbox",
+    "build": "npm run d && npm run rollup",
+    "build:watch": "npm run rollup -- --watch",
+    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
+    "mk-secure": "npm run jay-secure && mv ./lib/counter.jay.html.ts ./lib-secure/main && cp ./lib/counter.ts ./lib-secure/sandbox && cp ./lib/counter-refs.d.ts ./lib-secure/main",
     "confirm": "npm run clean && npm run build && npm run test",
     "test": ":"
   },
