--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -5,18 +5,19 @@
   "description": "",
   "scripts": {
     "d": "jay-cli definitions ./lib",
-    "jay-secure": "jay-cli runtime ./lib ./lib-secure/main",
-    "rollup": "echo 'rollup --config ./rollup.config.js'",
-    "build": "npm run d && npm run mk-secure && npm run rollup",
+    "jay-secure": "jay-cli runtime ./lib",
+    "rollup": "rollup --config ./rollup.config.js",
+    "build": "npm run d && npm run rollup",
+    "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
-    "copy": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
-    "copy-basic": "mkdir -p ./lib-secure/sandbox/basic/ && cp ./lib/basic/*-refs.d.ts ./lib-secure/main/basic && cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
-    "copy-collection": "mkdir -p ./lib-secure/sandbox/collections/ && cp ./lib/collections/*-refs.d.ts ./lib-secure/main/collections && cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
-    "copy-composite": "mkdir -p ./lib-secure/sandbox/composite/ && cp ./lib/composite/*-refs.d.ts ./lib-secure/main/composite && cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
-    "copy-condition": "mkdir -p ./lib-secure/sandbox/conditions/ && cp ./lib/conditions/*-refs.d.ts ./lib-secure/main/conditions && cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
-    "copy-table": "mkdir -p ./lib-secure/sandbox/table/ && cp ./lib/table/*-refs.d.ts ./lib-secure/main/table && cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
-    "mk-secure": "npm run jay-secure && npm run copy && npm run copy-basic && npm run copy-collection && npm run copy-composite && npm run copy-condition && npm run copy-table",
-    "clean": "rm -rf dist && (rm -rf lib/**/*.d.ts || :)",
+    "copy:main": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
+    "copy:basic": "cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
+    "copy:collection": "cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
+    "copy:composite": "cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
+    "copy:condition": "cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
+    "copy:table": "cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
+    "mk-secure": "npm run jay-secure",
+    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
     "test": ":"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
+    "npm-run-all2": "^6.1.1",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
