--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
+    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "clean": "rm -rf dist",
