--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:types && npm run build:fix-dts",
     "build:js": "vite build",
+    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "build:fix-dts": "node ./scripts/fix-dts.js",
