--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -22,6 +22,7 @@
     "runtime": "run-p --continue-on-error --aggregate-output --print-label 'runtime:*'",
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
+    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "clean": "rm -rf dist",
