--- a/packages/secure/tsconfig.json
+++ b/packages/secure/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist"
-  }
+  },
+  "include": ["lib"]
 }
