--- a/exploration/deserialization-benchmark/tsconfig.json
+++ b/exploration/deserialization-benchmark/tsconfig.json
@@ -1,16 +1,10 @@
 {
+  "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "module": "es2015",
-    "esModuleInterop": true,
-    "target": "es2019",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "rootDir": "./lib",
     "outDir": "dist",
-    "lib": ["es2019", "dom"],
-    "declaration": true
-  },
-  "lib": ["es2019"],
-  "exclude": ["dist"]
+    "paths": {
+      "jay-json-patch": ["../../packages/json-patch/lib"],
+      "jay-mutable": ["../../packages/mutable/lib"]
+    }
+  }
 }
