--- a/exploration/message-comm-channel/tsconfig.json
+++ b/exploration/message-comm-channel/tsconfig.json
@@ -1,16 +1,12 @@
 {
+  "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "module": "es2015",
-    "esModuleInterop": true,
-    "target": "es2019",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "rootDir": "./lib",
     "outDir": "dist",
-    "lib": ["es2019", "dom"],
-    "declaration": true
-  },
-  "lib": ["es2019"],
-  "exclude": ["dist"]
+    "paths": {
+      "jay-component": ["../../packages/component/lib"],
+      "jay-reactive": ["../../packages/reactive/lib"],
+      "jay-runtime": ["../../packages/runtime/lib"],
+      "jay-secure": ["../../packages/secure/lib"]
+    }
+  }
 }
