--- a/packages/_deprecated/mutable/tsconfig.json
+++ b/packages/_deprecated/mutable/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-reactive": ["../reactive/lib"]
+    }
   }
 }
