--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-component": ["../component/lib"],
+      "jay-runtime": ["../runtime/lib"],
+      "jay-secure": ["../secure/lib"]
+    }
   }
 }
