--- a/packages/component/tsconfig.json
+++ b/packages/component/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-json-patch": ["../json-patch/lib"],
+      "jay-reactive": ["../reactive/lib"],
+      "jay-runtime": ["../runtime/lib"]
+    }
   }
 }
