--- a/packages/json-patch/tsconfig.json
+++ b/packages/json-patch/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-list-compare": ["../list-compare/lib"]
+    }
   }
 }
