--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
+    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
