--- a/packages/rollup-plugin/tsconfig.json
+++ b/packages/rollup-plugin/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-compiler": ["../compiler/lib"]
+    }
   }
 }
