--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-list-compare": ["../list-compare/lib"],
+      "jay-reactive": ["../reactive/lib"]
+    }
   }
 }
