--- a/packages/serialization/tsconfig.json
+++ b/packages/serialization/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "jay-dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "jay-json-patch": ["../json-patch/lib"],
+      "jay-reactive": ["../reactive/lib"]
+    }
   }
 }
