--- a/examples/mini-benchmark/tsconfig.json
+++ b/examples/mini-benchmark/tsconfig.json
@@ -1,13 +1,8 @@
 {
+  "extends": "jay-dev-environment/examples/tsconfig.json",
   "compilerOptions": {
-    "module": "es2015",
-    "esModuleInterop": true,
-    "target": "es2015",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "dist",
-    "lib": ["es2016", "dom"],
-    "rootDirs": ["lib", "lib-secure"],
+    "module": "ES2022",
     "paths": {
       "jay-component": ["../../packages/component/lib"],
       "jay-json-patch": ["../../packages/json-patch/lib"],
@@ -16,7 +11,5 @@
       "jay-secure": ["../../packages/secure/lib"],
       "jay-serialization": ["../../packages/serialization/lib"]
     }
-  },
-  "lib": ["es2015"],
-  "include": ["lib/**/*", "lib-secure/**/*"]
+  }
 }
