--- a/exploration/serialization/package.json
+++ b/exploration/serialization/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "jay-dev-environment": "workspace:^",
     "rollup": "^4.5.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
