--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
+    "jay-dev-environment": "workspace:^",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
