--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
+    "jay-dev-environment": "workspace:^",
     "npm-run-all2": "^6.1.1",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
