--- a/examples/todo/tsconfig.json
+++ b/examples/todo/tsconfig.json
@@ -1,14 +1,14 @@
 {
+  "extends": "jay-dev-environment/examples/tsconfig.json",
   "compilerOptions": {
-    "module": "es2015",
-    "esModuleInterop": true,
-    "target": "es2015",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "dist",
-    "lib": ["es2016", "dom"],
-    "rootDir": "lib"
-  },
-  "lib": ["es2015"],
-  "include": ["lib/**/*"]
+    "module": "ES2022",
+    "paths": {
+      "jay-component": ["../../packages/component/lib"],
+      "jay-json-patch": ["../../packages/json-patch/lib"],
+      "jay-reactive": ["../../packages/reactive/lib"],
+      "jay-runtime": ["../../packages/runtime/lib"],
+      "jay-serialization": ["../../packages/serialization/lib"]
+    }
+  }
 }
