--- a/exploration/deserialization-benchmark/package.json
+++ b/exploration/deserialization-benchmark/package.json
@@ -4,7 +4,6 @@
   "type": "module",
   "scripts": {
     "rollup": "rollup --config ./rollup.config.js",
-    "ts": "tsc",
     "copy": "cp lib/index.html dist/index.html",
     "build": "npm run rollup && npm run copy",
     "confirm": "npm run clean && npm run build && npm run test",
@@ -13,6 +12,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "jay-dev-environment": "workspace:^",
     "rollup": "^4.5.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
