--- a/exploration/deserialization-benchmark/tsconfig.json
+++ b/exploration/deserialization-benchmark/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "jay-dev-environment/library/tsconfig.json",
+  "extends": "jay-dev-environment/examples/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "module": "ES2022",
     "paths": {
       "jay-json-patch": ["../../packages/json-patch/lib"],
       "jay-mutable": ["../../packages/mutable/lib"]
