--- a/exploration/message-comm-channel/package.json
+++ b/exploration/message-comm-channel/package.json
@@ -10,17 +10,18 @@
     "clean": "rm -rf dist",
     "test": ":"
   },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^4.5.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
-  },
   "dependencies": {
     "jay-component": "workspace:^",
     "jay-reactive": "workspace:^",
     "jay-runtime": "workspace:^",
     "jay-secure": "workspace:^"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "jay-dev-environment": "workspace:^",
+    "rollup": "^4.5.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   }
 }
