--- a/examples/tree/tsconfig.json
+++ b/examples/tree/tsconfig.json
@@ -2,11 +2,11 @@
   "extends": "jay-dev-environment/examples/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "ES2022",
     "paths": {
       "jay-component": ["../../packages/component/lib"],
       "jay-reactive": ["../../packages/reactive/lib"],
-      "jay-runtime": ["../../packages/runtime/lib"]
+      "jay-runtime": ["../../packages/runtime/lib"],
+      "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"]
     }
   }
 }
