--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
-    "build:watch": "vite build --watch",
+    "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
@@ -16,13 +16,12 @@
   },
   "dependencies": {
     "jay-compiler": "workspace:^",
-    "lodash": "^4.17.21",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4",
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
+    "rollup": "^4.5.1",
     "tsup": "^8.0.0",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
