--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
-    "jay-compiler": "workspace:^"
+    "glob": "^10.3.10",
+    "jay-compiler": "workspace:^",
+    "rollup": "^4.5.1",
+    "rollup-plugin-jay": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
