--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:pegjs && npm run build:js && npm run build:types",
     "build:pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.cjs lib/expressions/expression-parser.pegjs",
     "build:js": "vite build",
-    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
     "build:watch": "npm run build:js -- --watch",
     "clean": "rm -rf dist",
