--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -1,13 +1,12 @@
 {
   "name": "rollup-plugin-jay",
   "version": "1.0.0",
-  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:js": "vite build",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
-    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
     "clean": "rm -rf dist",
