--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ dist-secure
 build
 *.iml
 /packages/compiler/lib/expressions/expression-parser.js
-examples/**/*.d.ts
+examples/**/lib/**/*.d.ts
 examples/**/lib/**/*.jay.html.ts
 **/coverage/
 .yarn/install-state.gz
