--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "d": "jay-cli definitions ./lib",
-    "jay-secure": "jay-cli runtime ./lib",
+    "definitions": "jay-cli definitions ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run rollup",
+    "build": "npm run definitions && npm run rollup",
     "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
     "copy:main": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
@@ -16,7 +15,6 @@
     "copy:composite": "cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
     "copy:condition": "cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
     "copy:table": "cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
-    "mk-secure": "npm run jay-secure",
     "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
     "test": ":"
   },
