--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "d": "jay-cli definitions ./lib",
-    "jay-secure": "jay-cli runtime ./lib",
+    "definitions": "jay-cli definitions ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run rollup",
+    "build": "npm run definitions && npm run rollup",
     "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
     "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
