--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run definitions && npm run rollup",
+    "build": "npm run definitions && npm run copy:refs && npm run rollup",
     "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
+    "copy:refs": "run-s 'copy:refs:*'",
+    "copy:refs:main": "rsync -Rr --include='*/' --include='*-refs.d.ts' --exclude='*' lib lib-secure/main",
+    "copy:refs:sandbox": "rsync -Rr --include='*/' --include='*-refs.d.ts' --exclude='*' lib lib-secure/sandbox",
     "copy:main": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
     "copy:basic": "cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
     "copy:collection": "cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
     "copy:composite": "cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
     "copy:condition": "cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
     "copy:table": "cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
-    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay.html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "test": ":"
   },
   "dependencies": {
@@ -32,9 +35,11 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/shelljs": "^0",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
     "npm-run-all2": "^6.1.1",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
