--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "wsrun -te --report build",
     "clean": "wsrun clean",
-    "clean:node_modules": "rm -rf node_modules && rm -rf packages/*/node_modules && rm -rf examples/*/node_modules && rm -rf exploration/*/node_modules",
+    "clean:node_modules": "rimraf node_modules && rimraf packages/*/node_modules && rimraf examples/*/node_modules && rimraf exploration/*/node_modules",
     "clean:node_modules:with-cache": "npm run clean:node_modules && yarn cache clean",
     "confirm": "npm run rebuild && npm run test && npm run prettier",
     "deps:upgrade": "yarn upgrade-interactive && yarn && yarn deduplicate",
