--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,7 +9,7 @@
     "build:watch": "npm run build:cli-link && npm run build:js -- --watch",
     "build:check-types": "tsc",
     "build:cli-link": "cd ../../node_modules/.bin && ln -sf ../../packages/cli/dist/index.js jay-cli",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": ":",
     "test:watch": ":"
@@ -25,6 +25,7 @@
     "@types/node": "^20.9.2",
     "@types/shelljs": "^0",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
