--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -8,7 +8,7 @@
     "rollup": "rollup --config ./rollup.config.js",
     "build": "npm run definitions && npm run rollup",
     "build:watch": "npm run rollup -- --watch",
-    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay.html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "mk-secure": "npm run jay-secure && mv ./lib/counter.jay.html.ts ./lib-secure/main && cp ./lib/counter.ts ./lib-secure/sandbox && cp ./lib/counter-refs.d.ts ./lib-secure/main",
     "confirm": "npm run clean && npm run build && npm run test",
     "test": ":"
@@ -26,6 +26,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
