--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -9,7 +9,7 @@
     "build": "npm run definitions && npm run rollup",
     "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
-    "clean": "rm -rf dist && rm -rf dist-secure && (rm -rf lib/**/*.jay.html.ts || :) && (rm -rf lib/**/*.d.ts || :) && (rm -rf lib-secure/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay.html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "mk-secure": "npm run jay && mv ./lib/item.jay.html.ts ./lib-secure/main && mv ./lib/todo.jay.html.ts ./lib-secure/main && cp ./lib/item.ts ./lib-secure/sandbox && cp ./lib/todo.ts ./lib-secure/sandbox && cp ./lib/uuid.ts ./lib-secure/sandbox",
     "test": ":"
   },
@@ -28,6 +28,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-jay": "workspace:^",
