--- a/exploration/babel-plugin-jay/package.json
+++ b/exploration/babel-plugin-jay/package.json
@@ -8,7 +8,7 @@
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:watch": "npm run build:js -- --watch",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.0",
     "tslib": "^2.6.2",
     "tsup": "^8.0.0",
