--- a/exploration/deserialization-benchmark/package.json
+++ b/exploration/deserialization-benchmark/package.json
@@ -7,12 +7,13 @@
     "copy": "cp lib/index.html dist/index.html",
     "build": "npm run rollup && npm run copy",
     "confirm": "npm run clean && npm run build && npm run test",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "test": ":"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
