--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -9,7 +9,7 @@
     "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
