--- a/packages/json-patch/package.json
+++ b/packages/json-patch/package.json
@@ -8,7 +8,7 @@
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
