--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -9,7 +9,7 @@
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": ":",
     "test:watch": ":"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
+    "rimraf": "^5.0.5",
     "rollup": "^4.5.1",
     "tsup": "^8.0.0",
     "vite": "^5.0.0",
