--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -10,7 +10,7 @@
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "build:fix-dts": "node ./scripts/fix-dts.js",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -26,6 +26,7 @@
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
     "replace-in-file": "^7.0.2",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
