--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -25,7 +25,7 @@
     "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test && npm run definitions && npm run runtime",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -43,6 +43,7 @@
     "caniuse-lite": "^1.0.30001563",
     "jay-dev-environment": "workspace:^",
     "npm-run-all2": "^6.1.1",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
