--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -10,8 +10,8 @@
     "build:watch": "npm run rollup -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
     "copy:refs": "run-s 'copy:refs:*'",
-    "copy:refs:main": "rsync -Rr --include='*/' --include='*-refs.d.ts' --exclude='*' lib lib-secure/main",
-    "copy:refs:sandbox": "rsync -Rr --include='*/' --include='*-refs.d.ts' --exclude='*' lib lib-secure/sandbox",
+    "copy:refs:main": "rsync -r --include='*/' --include='*-refs.d.ts' --exclude='*' lib/* lib-secure/main",
+    "copy:refs:sandbox": "rsync -r --include='*/' --include='*-refs.d.ts' --exclude='*' lib/* lib-secure/sandbox",
     "copy:main": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
     "copy:basic": "cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
     "copy:collection": "cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
