--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ dist-secure
 build
 *.iml
 /packages/compiler/lib/expressions/expression-parser.js
-examples/**/lib/**/*.d.ts
-examples/**/lib-secure/**/*.d.ts
+examples/**/*.d.ts
 examples/**/lib/**/*.jay.html.ts
 **/coverage/
 .yarn/install-state.gz
