--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -9,11 +9,11 @@
   },
   "scripts": {
     "build": "npm run build:pegjs && npm run build:js && npm run build:types",
+    "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
     "build:pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.cjs lib/expressions/expression-parser.pegjs",
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
-    "build:watch": "npm run build:js -- --watch",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
@@ -33,18 +33,18 @@
     "pluralize": "^8.0.0",
     "prettier": "^3.1.0",
     "ts-morph": "^20.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@caiogondim/strip-margin": "^1.0.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@types/node": "^20.9.2",
+    "@types/node": "^20.10.0",
     "jay-dev-environment": "workspace:^",
     "jest-diff": "^29.7.0",
     "jest-matcher-utils": "^29.7.0",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.0",
-    "vite": "^5.0.0",
+    "tsup": "^8.0.1",
+    "vite": "^5.0.3",
     "vitest": "^0.34.6"
   }
 }
