--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npm run build:js && npm run build:types",
+    "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
     "build:js": "vite build",
-    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "clean": "rimraf dist",
@@ -21,12 +21,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
-    "@types/node": "^20.9.2",
+    "@types/node": "^20.10.0",
     "jay-dev-environment": "workspace:^",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.3",
     "vitest": "^0.34.6"
   }
 }
