--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -5,11 +5,12 @@
   "main": "dist/index",
   "scripts": {
     "build": "npm run build:js && npm run build:types && npm run build:fix-dts",
+    "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch & npm run build:watch:fix-dts",
     "build:js": "vite build",
-    "build:watch": "vite build --watch",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "build:fix-dts": "node ./scripts/fix-dts.js",
+    "build:fix-dts": "node scripts/fix-dts.js",
+    "build:watch:fix-dts": "nodemon --watch dist -e d.ts -x \"npm run build:fix-dts\"",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
@@ -18,18 +19,19 @@
   "dependencies": {
     "jay-list-compare": "workspace:^",
     "jay-reactive": "workspace:^",
-    "jsdom": "^22.1.0"
+    "jsdom": "^23.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
-    "@types/jsdom": "^21.1.5",
-    "@types/node": "^20.9.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.0",
     "jay-dev-environment": "workspace:^",
+    "nodemon": "^3.0.1",
     "replace-in-file": "^7.0.2",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.3",
     "vitest": "^0.34.6"
   }
 }
