--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
+    "build:watch:sandbox-counter": "vite -c ./test/jayRuntime/fixtures/sandbox-counter/source/vite.config.ts",
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
@@ -21,10 +22,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
+    "jay-component": "workspace:^",
     "jay-dev-environment": "workspace:^",
-    "rollup-plugin-typescript2": "^0.36.0",
+    "jay-runtime": "workspace:^",
+    "jay-secure": "workspace:^",
     "rimraf": "^5.0.5",
     "rollup": "^4.6.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tsup": "^8.0.1",
     "vite": "^5.0.5",
     "vitest": "^0.34.6"
